fixed flickers on auth page forms

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -97,3 +97,7 @@
     line-height: 2.6rem;;
   }
 }
+.fixed-content{
+  min-width: 334px;
+  min-height: 280px;
+}
